split functions into separate modules

--- a/python_sql/ETL.ipynb
+++ b/python_sql/ETL.ipynb
@@ -8,9 +8,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import sqlite3\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
+    "# import numpy as np\n",
     "import os\n",
     "from pathlib import Path\n",
     "import glob\n",
@@ -18,14 +17,15 @@
     "from io import BytesIO\n",
     "import bz2\n",
     "from datetime import datetime, time\n",
-    "from sql_queries import create_table_queries, drop_table_queries, planes_table_insert,  carriers_table_insert, airports_table_insert, on_time_table_insert\n",
-    "import boto3"
+    "from sql_queries import planes_table_insert,  carriers_table_insert, airports_table_insert, on_time_table_insert\n",
+    "from aws_utils import *\n",
+    "from create_tables import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "b0f8df82",
+   "execution_count": null,
+   "id": "16511680",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,63 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "f7c1326e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def initialise_db():\n",
-    "    db_filename = \"airline2.db\"\n",
-    "        \n",
-    "    # remove the db file if it exists\n",
-    "    try:\n",
-    "        os.remove(db_filename)\n",
-    "    except FileNotFoundError:\n",
-    "        pass\n",
-    "    \n",
-    "    # create database and open connection\n",
-    "    conn = sqlite3.connect(db_filename)\n",
-    "    cur = conn.cursor()\n",
-    "    \n",
-    "    return cur, conn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "a2745cfa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def drop_tables(cur, conn):\n",
-    "    \"\"\"\n",
-    "    Drops each table using the queries in `drop_table_queries` list.\n",
-    "    \"\"\"\n",
-    "    for query in drop_table_queries:\n",
-    "        cur.execute(query)\n",
-    "        conn.commit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "5aff2894",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_tables(cur, conn):\n",
-    "    \"\"\"\n",
-    "    Creates each table using the queries in `create_table_queries` list. \n",
-    "    \"\"\"\n",
-    "    for query in create_table_queries:\n",
-    "        cur.execute(query)\n",
-    "        conn.commit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "3c768611",
+   "execution_count": null,
+   "id": "f53e2092",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,8 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "a32f2f64",
+   "execution_count": null,
+   "id": "0db9de17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,18 +66,13 @@
     "#         df.DepTime = df.DepTime.apply(timeFloatToDatetime)\n",
     "#         df.ArrTime = df.ArrTime.apply(timeFloatToDatetime)\n",
     "#         df.CRSDepTime = df.CRSDepTime.apply(timeFloatToDatetime)\n",
-    "#         df.CRSArrTime = df.CRSArrTime.apply(timeFloatToDatetime)\n",
-    "        \n",
-    "#         for _, row in df.iterrows():\n",
-    "#             record_list.append(row)\n",
-    "#         cur.executemany(insert_query, record_list)\n",
-    "#             cur.execute(insert_query, list(row))"
+    "#         df.CRSArrTime = df.CRSArrTime.apply(timeFloatToDatetime)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "063d3487",
+   "execution_count": null,
+   "id": "2fde79a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,14 +92,21 @@
     "    data_directory = str(Path.home()) + \"/Desktop/University/data-science-and-business-analytics/programming-for-data-science/dataverse_files/\"\n",
     "    \n",
     "    # get all files matching extension from directory\n",
-    "    all_files = []\n",
+    "    csv_files = []\n",
     "    for root, dirs, files in os.walk(data_directory):\n",
-    "        files = glob.glob(os.path.join(root,'*'))\n",
+    "        files = glob.glob(os.path.join(root,'*.csv'))\n",
     "        for f in files :\n",
-    "            all_files.append(os.path.abspath(f))\n",
+    "            csv_files.append(os.path.abspath(f))\n",
+    "            \n",
+    "    # get all files matching extension from directory\n",
+    "    bz2_files = []\n",
+    "    for root, dirs, files in os.walk(data_directory):\n",
+    "        files = glob.glob(os.path.join(root,'*.bz2'))\n",
+    "        for f in files :\n",
+    "            bz2_files.append(os.path.abspath(f))\n",
     "\n",
-    "    # iterate over files and process\n",
-    "    for i, datafile in enumerate(all_files, 1):\n",
+    "    # iterate over csv files and process\n",
+    "    for i, datafile in enumerate(csv_files, 1):\n",
     "        if datafile.endswith('plane-data.csv'):\n",
     "            process_csv_file(datafile, cur, planes_table_insert)\n",
     "            conn.commit()\n",
@@ -172,141 +119,34 @@
     "            process_csv_file(datafile, cur, airports_table_insert)\n",
     "            conn.commit()\n",
     "            print('Airports file upload successful')\n",
-    "        else:\n",
-    "            match = re.search(r'200(0|1|2|3|4|5){1}.csv.bz2$', datafile)\n",
-    "\n",
-    "            if match:\n",
-    "                process_bz2_file(datafile, cur, on_time_table_insert)\n",
-    "                conn.commit()\n",
-    "                print(\"Flight file upload successful\")"
+    "            \n",
+    "    \n",
+    "    # iterate over bz2 files and process\n",
+    "    year_re = r'200(0|1|2|3|4|5){1}.csv.bz2$'\n",
+    "    for i, datafile in enumerate(bz2_files, 1):\n",
+    "        match = re.search(year_re, datafile)\n",
+    "        \n",
+    "        if match:\n",
+    "            process_bz2_file(datafile, cur, on_time_table_insert)\n",
+    "            conn.commit()\n",
+    "            print(\"Flight_file_upload_successful\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "56843a5b",
+   "execution_count": 2,
+   "id": "7d518383",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def aws_connect():\n",
-    "    \"\"\"\n",
-    "    Description: This function is responsible for establishing the interface with the AWS S3 bucket where the database\n",
-    "    file should be stored.\n",
+    "# # initialize a new db\n",
+    "# cur, conn = initialise_db()\n",
+    "# drop_tables(cur, conn)\n",
+    "# create_tables(cur, conn)\n",
     "\n",
-    "    Arguments:\n",
-    "        None\n",
+    "# process_data(cur, conn)\n",
     "\n",
-    "    Returns:\n",
-    "        Boto3 client and resource objects\n",
-    "    \"\"\"\n",
-    "    access_keys = get_aws_access_keys()\n",
-    "    \n",
-    "    # Creating the low level functional client\n",
-    "    client = boto3.client(\n",
-    "        's3',\n",
-    "        aws_access_key_id = access_keys['AWSAccessKeyId'],\n",
-    "        aws_secret_access_key = access_keys['AWSSecretKey'],\n",
-    "        region_name = 'eu-central-1'\n",
-    "    )\n",
-    "\n",
-    "    # Creating the high level object oriented interface\n",
-    "    resource = boto3.resource(\n",
-    "        's3',\n",
-    "        aws_access_key_id = access_keys['AWSAccessKeyId'],\n",
-    "        aws_secret_access_key = access_keys['AWSSecretKey'],\n",
-    "        region_name = 'eu-central-1'\n",
-    "    )\n",
-    "    \n",
-    "    return client, resource"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "32691a1d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_aws_access_keys():\n",
-    "    \"\"\"\n",
-    "    Description: This function retrieves access keys for the AWS S3 bucket where the database file is to be stored.\n",
-    "    \n",
-    "\n",
-    "    Arguments:\n",
-    "        None\n",
-    "\n",
-    "    Returns:\n",
-    "        Dictionary containing values for AWSAccessKeyId and AWSSecretKey\n",
-    "    \"\"\"\n",
-    "    file_name = data_directory = str(Path.home()) + \"/Desktop/University/data-science-and-business-analytics/programming-for-data-science/st2195_assignment_3/rootkey.csv\"\n",
-    "    key_dictionary = {}\n",
-    "    with open(file_name, \"r\") as file:\n",
-    "        for line in file.readlines():\n",
-    "            key_dictionary[line.split(\"=\")[0].strip()] = line.split(\"=\")[1].strip()\n",
-    "    \n",
-    "    return key_dictionary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "188ea3c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def upload_dbfile(filename):\n",
-    "    \"\"\"\n",
-    "    Description: This function is responsible for uploading a given database file to the designated AWS S3 bucket.\n",
-    "    Once succesfully uploaded, the local file is deleted.\n",
-    "\n",
-    "    Arguments:\n",
-    "        filename (string): name of the database file (format-agnostic)\n",
-    "\n",
-    "    Returns:\n",
-    "        None\n",
-    "    \"\"\"\n",
-    "    # generate AWS interface objects\n",
-    "    client, resource = aws_connect()\n",
-    "    \n",
-    "    try:   \n",
-    "        # open the file and upload to S3 bucket\n",
-    "        with open(filename, 'rb') as data:\n",
-    "            client.upload_fileobj(data, 'flights-db', 'db-file')\n",
-    "\n",
-    "        # delete the local file\n",
-    "        os.remove(filename)\n",
-    "    except ClientError as e:\n",
-    "        print(\"Error uploading database file\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "1dd1b0c6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "26 files found in /Users/bastienwinant/Desktop/University/data-science-and-business-analytics/programming-for-data-science/dataverse_files/\n",
-      "9/26 files processed.\n",
-      "10/26 files processed.\n",
-      "12/26 files processed.\n",
-      "19/26 files processed.\n",
-      "23/26 files processed.\n",
-      "24/26 files processed.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# initialize a new db\n",
-    "cur, conn = initialise_db()\n",
-    "create_tables(cur, conn)\n",
-    "\n",
-    "process_data(cur, conn)\n",
-    "\n",
-    "conn.close()\n",
+    "# conn.close()\n",
     "\n",
     "upload_dbfile('airline2.db')"
    ]
@@ -314,15 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa4e7116",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5be5ad2",
+   "id": "a3ec90a3",
    "metadata": {},
    "outputs": [],
    "source": []
