add foreign keys to on_time table

--- a/python_sql/ETL.ipynb
+++ b/python_sql/ETL.ipynb
@@ -9,7 +9,6 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "# import numpy as np\n",
     "import os\n",
     "from pathlib import Path\n",
     "import glob\n",
@@ -24,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "16511680",
    "metadata": {},
    "outputs": [],
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f53e2092",
    "metadata": {},
    "outputs": [],
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0db9de17",
    "metadata": {},
    "outputs": [],
@@ -71,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2fde79a1",
    "metadata": {},
    "outputs": [],
@@ -129,24 +128,54 @@
     "        if match:\n",
     "            process_bz2_file(datafile, cur, on_time_table_insert)\n",
     "            conn.commit()\n",
-    "            print(\"Flight_file_upload_successful\")"
+    "            print(\"Flight file upload successful\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "7d518383",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Planes file upload successful\n",
+      "Airports file upload successful\n",
+      "Carriers file upload successful\n",
+      "Flight_file_upload_successful\n",
+      "Flight_file_upload_successful\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/ld/g047qhg94d7fpkft6h6jkt140000gn/T/ipykernel_2943/1279402755.py:4: DtypeWarning: Columns (22) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(BytesIO(data), encoding='latin_1')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Flight_file_upload_successful\n",
+      "Flight_file_upload_successful\n",
+      "Flight_file_upload_successful\n",
+      "Flight_file_upload_successful\n"
+     ]
+    }
+   ],
    "source": [
-    "# # initialize a new db\n",
-    "# cur, conn = initialise_db()\n",
-    "# drop_tables(cur, conn)\n",
-    "# create_tables(cur, conn)\n",
+    "# initialize a new db\n",
+    "cur, conn = initialise_db()\n",
+    "drop_tables(cur, conn)\n",
+    "create_tables(cur, conn)\n",
     "\n",
-    "# process_data(cur, conn)\n",
+    "process_data(cur, conn)\n",
     "\n",
-    "# conn.close()\n",
+    "conn.close()\n",
     "\n",
     "upload_dbfile('airline2.db')"
    ]
@@ -154,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3ec90a3",
+   "id": "2c8c2159",
    "metadata": {},
    "outputs": [],
    "source": []
