create new notebook using to_sql for loading

--- a/python_sql/ETL_manual.ipynb
+++ b/python_sql/ETL_manual.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2d911d6c",
    "metadata": {},
    "outputs": [],
@@ -23,60 +23,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "16511680",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def timeFloatToDatetime(timeFloat):\n",
-    "    try:\n",
-    "        if pd.notna(timeFloat):\n",
-    "            hour = int(timeFloat // 100) % 24\n",
-    "            minute = int(timeFloat % 100)\n",
-    "            \n",
-    "            return time(hour = hour, minute = minute)\n",
-    "        return timeFloat\n",
-    "    except ValueError:\n",
-    "        return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f53e2092",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_csv_file(file_name, conn, table_name):\n",
+    "def process_csv_file(file_name, cur, insert_query):\n",
     "    df = pd.read_csv(file_name)\n",
-    "#     cur.executemany(insert_query, df.values.tolist())\n",
-    "    df.to_sql(table_name, conn, if_exists=\"replace\", index=False)"
+    "    cur.executemany(insert_query, df.values.tolist())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0db9de17",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_bz2_file(file_name, conn, table_name):\n",
+    "def process_bz2_file(file_name, cur, insert_query):\n",
     "    with bz2.open(file_name, \"rb\") as f:\n",
     "        data = f.read()\n",
     "        df = pd.read_csv(BytesIO(data), encoding='latin_1')\n",
-    "#         cur.executemany(insert_query, df.values.tolist())\n",
-    "        \n",
-    "        df.DepTime = df.DepTime.apply(timeFloatToDatetime)\n",
-    "        df.ArrTime = df.ArrTime.apply(timeFloatToDatetime)\n",
-    "        df.CRSDepTime = df.CRSDepTime.apply(timeFloatToDatetime)\n",
-    "        df.CRSArrTime = df.CRSArrTime.apply(timeFloatToDatetime)\n",
-    "        \n",
-    "        df.to_sql(table_name, conn, if_exists=\"append\", index=False)"
+    "        cur.executemany(insert_query, df.values.tolist())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2fde79a1",
    "metadata": {},
    "outputs": [],
@@ -113,32 +86,49 @@
     "    # iterate over csv files and process\n",
     "    for i, datafile in enumerate(csv_files, 1):\n",
     "        if datafile.endswith('plane-data.csv'):\n",
-    "            process_csv_file(datafile, conn, \"planes\")\n",
+    "            process_csv_file(datafile, cur, planes_table_insert)\n",
+    "            conn.commit()\n",
     "            print('Planes file upload successful')\n",
     "        elif datafile.endswith('carriers.csv'):\n",
-    "            process_csv_file(datafile, conn, \"carriers\")\n",
+    "            process_csv_file(datafile, cur, carriers_table_insert)\n",
+    "            conn.commit()\n",
     "            print('Carriers file upload successful')\n",
     "        elif datafile.endswith('airports.csv'):\n",
-    "            process_csv_file(datafile, conn, \"airports\")\n",
+    "            process_csv_file(datafile, cur, airports_table_insert)\n",
+    "            conn.commit()\n",
     "            print('Airports file upload successful')\n",
     "            \n",
     "    \n",
     "    # iterate over bz2 files and process\n",
-    "    year_re = r'200(0|1|2|3|4|5){1}.csv.bz2$'\n",
+    "    year_re = r'200(6|7|8){1}.csv.bz2$'\n",
     "    for i, datafile in enumerate(bz2_files, 1):\n",
     "        match = re.search(year_re, datafile)\n",
     "        \n",
     "        if match:\n",
-    "            process_bz2_file(datafile, conn, on_time_table_insert)\n",
+    "            process_bz2_file(datafile, cur, on_time_table_insert)\n",
+    "            conn.commit()\n",
     "            print(\"Flight file upload successful\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7d518383",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Planes file upload successful\n",
+      "Airports file upload successful\n",
+      "Carriers file upload successful\n",
+      "Flight file upload successful\n",
+      "Flight file upload successful\n",
+      "Flight file upload successful\n"
+     ]
+    }
+   ],
    "source": [
     "# initialize a new db\n",
     "cur, conn = initialise_db()\n",
