add questions file

--- a/python_sql/ETL.ipynb
+++ b/python_sql/ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2d911d6c",
    "metadata": {},
    "outputs": [],
@@ -16,14 +16,13 @@
     "from io import BytesIO\n",
     "import bz2\n",
     "from datetime import datetime, time\n",
-    "from sql_queries import planes_table_insert,  carriers_table_insert, airports_table_insert, on_time_table_insert\n",
     "from aws_utils import *\n",
     "from create_tables import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "16511680",
    "metadata": {},
    "outputs": [],
@@ -42,20 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f53e2092",
    "metadata": {},
    "outputs": [],
    "source": [
     "def process_csv_file(file_name, conn, table_name):\n",
     "    df = pd.read_csv(file_name)\n",
-    "#     cur.executemany(insert_query, df.values.tolist())\n",
     "    df.to_sql(table_name, conn, if_exists=\"replace\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0db9de17",
    "metadata": {},
    "outputs": [],
@@ -64,7 +62,6 @@
     "    with bz2.open(file_name, \"rb\") as f:\n",
     "        data = f.read()\n",
     "        df = pd.read_csv(BytesIO(data), encoding='latin_1')\n",
-    "#         cur.executemany(insert_query, df.values.tolist())\n",
     "        \n",
     "        df.DepTime = df.DepTime.apply(timeFloatToDatetime)\n",
     "        df.ArrTime = df.ArrTime.apply(timeFloatToDatetime)\n",
@@ -76,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "2fde79a1",
    "metadata": {},
    "outputs": [],
@@ -124,29 +121,38 @@
     "            \n",
     "    \n",
     "    # iterate over bz2 files and process\n",
-    "    year_re = r'200(0|1|2|3|4|5){1}.csv.bz2$'\n",
+    "    year_re = r'200(6|7|8){1}.csv.bz2$'\n",
     "    for i, datafile in enumerate(bz2_files, 1):\n",
     "        match = re.search(year_re, datafile)\n",
     "        \n",
     "        if match:\n",
-    "            process_bz2_file(datafile, conn, on_time_table_insert)\n",
+    "            process_bz2_file(datafile, conn, \"on_time\")\n",
     "            print(\"Flight file upload successful\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "7d518383",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Planes file upload successful\n",
+      "Airports file upload successful\n",
+      "Carriers file upload successful\n",
+      "Flight file upload successful\n",
+      "Flight file upload successful\n",
+      "Flight file upload successful\n"
+     ]
+    }
+   ],
    "source": [
     "# initialize a new db\n",
     "cur, conn = initialise_db()\n",
-    "drop_tables(cur, conn)\n",
-    "create_tables(cur, conn)\n",
-    "\n",
     "process_data(cur, conn)\n",
-    "\n",
     "conn.close()\n",
     "\n",
     "# upload_dbfile('airline2.db')"
