--- a/python_sql/ETL.ipynb
+++ b/python_sql/ETL.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "cef06530",
+   "metadata": {},
+   "source": [
+    "# Practice Assignment III\n",
+    "## *Python*\n",
+    "> Load the files of [this dataset](https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/HG7NV7) into an SQLite database."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8da13697",
+   "metadata": {},
+   "source": [
+    "#### Import libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "2d911d6c",
@@ -21,6 +39,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7bd8f2b2",
+   "metadata": {},
+   "source": [
+    "#### Data transformation functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "16511680",
@@ -28,6 +54,15 @@
    "outputs": [],
    "source": [
     "def timeFloatToDatetime(timeFloat):\n",
+    "    \"\"\"\n",
+    "    Converts a float in the form hhmm to a datetime.time object.\n",
+    "\n",
+    "    Inputs\n",
+    "        timeFloat: float\n",
+    "\n",
+    "    Returns\n",
+    "        datetime.time object\n",
+    "    \"\"\"\n",
     "    try:\n",
     "        if pd.notna(timeFloat):\n",
     "            hour = int(timeFloat // 100) % 24\n",
@@ -37,6 +72,16 @@
     "        return timeFloat\n",
     "    except ValueError:\n",
     "        return None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2039f2f4",
+   "metadata": {},
+   "source": [
+    "#### Reading and uploading the data\n",
+    "Separate functions are used to handle CSV and BS2 files.<br>\n",
+    "Both read the data into Pandas dataframes, and leverage to_sql method to create and fill tables."
    ]
   },
   {
@@ -69,6 +114,15 @@
     "        df.CRSArrTime = df.CRSArrTime.apply(timeFloatToDatetime)\n",
     "        \n",
     "        df.to_sql(table_name, conn, if_exists=\"append\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c246ca29",
+   "metadata": {},
+   "source": [
+    "#### Apply ETL scripts to input files\n",
+    "Loop through the files and selectively launch ETL scripts to store the data in SQLite tables."
    ]
   },
   {
@@ -184,6 +238,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
